--- a/src/Business Layer/DotNetBase.Business.Identity/DotNetBase.Business.Identity.csproj
+++ b/src/Business Layer/DotNetBase.Business.Identity/DotNetBase.Business.Identity.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.6.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Data Access Layer\DotNetBase.EFCore\DotNetBase.EFCore.csproj" />
     <ProjectReference Include="..\..\Infrastructure\DotNetBase.Infrastructure.Common\DotNetBase.Infrastructure.Common.csproj" />
   </ItemGroup>
